--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,5 +24,6 @@
     "registed": "Registered",
     "areYouSure": "Are you sure?",
     "deleted": "Deleted",
-    "updated": "Updated"
+    "updated": "Updated",
+    "listIsEmpty": "List is empty, please add a new Client"
 }
